--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
